swaggerize user apis
